infra/k8s/istio-peer-auth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: nebula
spec:
  mtls:
    mode: STRICT
